Map sucks less, also fixed a p2s call